 - [web] notify when successfuly copied or moved some messages
 - [web] restored indicator in the top banner when a vacation message (auto-reply) is active
 - [web] removed animation when dragging an event to speed up rendering
 - [web] expunge drafts mailbox when a draft is sent and deleted
 - [web] actions of Sieve filters are now sortable

Bug fixes
 - [web] fixed refresh of addressbook when deleting one or many cards
 - [web] reset multiple-selection mode after deleting cards, events or tasks
 - [web] fixed exception when moving tasks to a different calendar
 - [web] fixed printing of long mail (#3731)
 - [web] fixed position of ghost block when creating an event from DnD
 - [web] fixed avatar image in autocompletion
 - [web] restored expunge of current mailbox when leaving the Mail module
 - [web] added support for multiple description values in LDAP entries (#3750)
 - [eas] fixed long GUID issue preventing sometimes synchronisation (#3460)

3.1.4 (2016-07-12)
------------------

New features
 - [core] new sogo-tool truncate-calendar feature (#1513, #3141)
 - [eas] initial Out-of-Office support in EAS
 - [oc] initial support for calendar and address book sharing with OpenChange

Enhancements
 - [eas] use the preferred email identity in EAS if valid (#3698)
 - [eas] handle inline attachments during EAS content generation
 - [web] all batch operations can now be performed on selected messages in advanced search mode
 - [web] add date picker to change date, week, or month of current Calendar view
 - [web] style cancelled events in Calendar module
 - [web] replace sortable library for better support with Firefox
 - [web] stage-1 tuning of sgColorPicker directive
 - [oc] better handling of nested attachments with OpenChange

Bug fixes
 - [web] fixed crash when an attachment filename has no extension
 - [web] fixed selection of transparent all-day events (#3744)
 - [web] leaving the dropping area while dragging a file was blocking the mail editor