@@ -15,6 +15,7 @@
   border-radius: 50%;
   padding: $baseline-grid/2;
   box-shadow: $whiteframe-shadow-3dp;
+  z-index: $z-index-view;
   md-progress-circular {
     display: block;
   }
